--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/react-dom": "^16.9.13",
     "@types/react-redux": "^7.1.16",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.6.8",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5",
     "web-vitals": "^0.2.4",
@@ -57,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
   }
 }
